--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Kool Kids Klub</title>
+        <title>retrogames-chat-dision</title>
         <body style="color: black; background-color: white; font-family:calibri"> 
             <font face="calibri">
-                <h3>Tyler Austin Is An Honorary Member of the Kool Kids Klub</h3>
-                <h3>Simeon Is An Honorary Member of the Kool Kids Klub</h3>
-                <img src="https://www.w3schools.com/html/html5.gif">
-                <Ol><li><a href="https://bananasunblocked.weebly.com">Weebly Website</a></li>
                 <!-- begin wwww.htmlcommentbox.com -->
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
