--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>retrogames-chat-dision</title>
+        <title>retrogames-chat-division</title>
         <body style="color: black; background-color: white; font-family:calibri"> 
             <font face="calibri">
                 <!-- begin wwww.htmlcommentbox.com -->
